updated gitignore file added development configs jbimages plugin path changed

--- a/common/backend/js/plugins/tiny_mce/plugins/jbimages/dialog.htm
+++ b/common/backend/js/plugins/tiny_mce/plugins/jbimages/dialog.htm
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-	<form class="form-inline" id="upl" name="upl" action="http://bimpra.tk/uploader/upload/{#jbimages_dlg.lang_id}" method="post" enctype="multipart/form-data" target="upload_target" onsubmit="jbImagesDialog.inProgress();">
+	<form class="form-inline" id="upl" name="upl" action="http://bimpra.local/uploader/upload/{#jbimages_dlg.lang_id}" method="post" enctype="multipart/form-data" target="upload_target" onsubmit="jbImagesDialog.inProgress();">
 		
 		<h2>{#jbimages_dlg.select_an_image}</h2>
 		
